--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                      Sumit Mishra secured good marks in IIT-JEE and took admission in NIT-GUJRAT.
                    </p>
                    <h1>SUMIT MISHRA</h1>
-                   <h2>Score</h2>
+                   <h2>NIT-G</h2>
                 </div>
              
             </div>
@@ -454,7 +454,7 @@
                      Sumit Mishra secured good rank in IIT-JEE and took admission in NIT GUJRAT.
                    </p>
                    <h1>Sumit Mishra</h1>
-                   <h2>Score</h2>
+                   <h2>NIT GUJRAT</h2>
                 </div>
                   
             </div>
