--- a/contact.html
+++ b/contact.html
@@ -170,6 +170,8 @@
                            <a href="https://wa.link/ed2w9k"><i class="fab fa-whatsapp"></i></a>
                         </ul>
                     </div>
+           <hr>
+                    <p class="copyright">Made with &#128151; by Shraddha Jaiswal &#169;</p>
               </div>
          </div>
     </div>
