--- a/about.html
+++ b/about.html
@@ -336,7 +336,7 @@
                            <a href="https://www.facebook.com/manish.shukla.376695"><i class="fab fa-facebook"></i></a>
                            <a href="https://www.instagram.com/manishkumarshukla63/"><i class="fab fa-instagram"></i></a>
                            <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><i class="fab fa-youtube"></i></a>
-                           <a href="94538 50113"><i class="fab fa-whatsapp"></i></a>
+                           <a href="https://wa.link/ed2w9k"><i class="fab fa-whatsapp"></i></a>
                         </ul>
                     </div>
 		 
