--- a/services.html
+++ b/services.html
@@ -262,7 +262,7 @@
                     <div class="logo">
                       <h1>Einstein Academy</h1></div>
                     <div class="icons d-flex justify-content-center">
-                           <a href="https://www.facebook.com/shraddha.jaiswal.3348/"><i class="fab fa-facebook"></i></a>
+                           <a href="https://www.facebook.com/manish.shukla.376695"><i class="fab fa-facebook"></i></a>
                            <a href="https://www.instagram.com/techeducationhub/"><i class="fab fa-instagram"></i></a>
                            <a href="https://www.youtube.com/channel/UC2jUsw8PXPac9fR00erVtlQ"><i class="fab fa-youtube"></i></a>
                            <a href="https://wa.link/ed2w9k"><i class="fab fa-whatsapp"></i></a>
